[package]
name = "xrt-lp-rewards"
version = "0.1.0"
description = "XRT liquidity pool rewards calculator."
authors = ["Alexander Krupenkin <mail@akru.me>"]
edition = "2018"

[[bin]]
name = "lp-rewards"
path = "bin/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
structopt = "0.3.15"
sp-runtime = { git = "https://github.com/paritytech/substrate" }
wasm-bindgen = { version = "0.2.57", optional = true }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate" }

[build-dependencies]
structopt = "0.3.15"

[features]
default = []
browser = ["wasm-bindgen"]
